--- a/Project 1 Data Katrina.ipynb
+++ b/Project 1 Data Katrina.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "id": "9350e101",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "id": "ddf38f14",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "4  1978-04-01           56.38"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "id": "03b3b08a",
    "metadata": {
     "scrolled": true
@@ -202,7 +202,7 @@
        "99  New Orleans Metro Area     -3  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "id": "d032fe50",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "4  1988-05-01          212.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "id": "cd39a500",
    "metadata": {
     "scrolled": true
@@ -419,7 +419,7 @@
        "160     2005-08-29  New Orleans Metro Area     -4  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "id": "804da188",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
        "4  2005-01-01  84318.920"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "id": "9be756cc",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "4      0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "id": "567e513a",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "4  1990-05-01        6.2"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "id": "155cc0ec",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
        "136     -4  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "id": "98e45bcf",
    "metadata": {},
    "outputs": [
@@ -949,7 +949,7 @@
        "4  1/1/2005   30216"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "id": "01d49815",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
        "4 2005-01-01   30216   Katrina     2005-08-29  New Orleans Metro Area      0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "id": "0cf1395f",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1155,7 @@
        "4  1/1/2004  1314.721"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "id": "e4675978",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1197,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>NORPOP</th>\n",
+       "      <th>Population</th>\n",
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
@@ -1255,15 +1255,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        DATE    NORPOP Hurricane Hurricane Date                Location  Delta\n",
-       "1 2001-01-01  1311.131   Katrina     2005-08-29  New Orleans Metro Area     -4\n",
-       "2 2002-01-01  1311.390   Katrina     2005-08-29  New Orleans Metro Area     -3\n",
-       "3 2003-01-01  1312.039   Katrina     2005-08-29  New Orleans Metro Area     -2\n",
-       "4 2004-01-01  1314.721   Katrina     2005-08-29  New Orleans Metro Area     -1\n",
-       "5 2005-01-01  1313.460   Katrina     2005-08-29  New Orleans Metro Area      0"
+       "        DATE  Population Hurricane Hurricane Date                Location  \\\n",
+       "1 2001-01-01    1311.131   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "2 2002-01-01    1311.390   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "3 2003-01-01    1312.039   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "4 2004-01-01    1314.721   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "5 2005-01-01    1313.460   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "\n",
+       "   Delta  \n",
+       "1     -4  \n",
+       "2     -3  \n",
+       "3     -2  \n",
+       "4     -1  \n",
+       "5      0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,12 +1294,15 @@
     "\n",
     "katrina_population_df['Delta'] = katrina_population_df['Delta'].astype(int)\n",
     "\n",
+    "#Rename column \n",
+    "katrina_population_df = katrina_population_df.rename(columns={'NORPOP': 'Population'})\n",
+    "\n",
     "katrina_population_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "id": "f94fab04",
    "metadata": {},
    "outputs": [],
