--- a/Project 1 Data Rita.ipynb
+++ b/Project 1 Data Rita.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "id": "9d5ad0c3",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 82,
    "id": "df723ae9",
    "metadata": {
     "scrolled": true
@@ -87,7 +87,7 @@
        "4  1977-01-01           60.39"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "id": "a0bb91b4",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "104     -3  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 84,
    "id": "31c4e017",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "4  1994-01-01           7.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
    "id": "2f215b0f",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "15     2005-09-18  Houston Area      0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 86,
    "id": "b7d8170a",
    "metadata": {
     "scrolled": true
@@ -519,7 +519,7 @@
        "4  2005-01-01           748588"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 87,
    "id": "74751679",
    "metadata": {
     "scrolled": true
@@ -629,7 +629,7 @@
        "4 2005-01-01    748588      Rita     2005-09-18  Houston Area      0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
    "id": "06c3f813",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "4  1990-05-01         5.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 89,
    "id": "fec16976",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
        "136 2001-05-01           4.6      Rita     2005-09-18  Houston Area     -4"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 90,
    "id": "c930ac8b",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "4  1993-01-01              21429"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 91,
    "id": "59117dbb",
    "metadata": {},
    "outputs": [
@@ -979,7 +979,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>MHITX48225A052NCEN</th>\n",
+       "      <th>Median</th>\n",
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
@@ -1037,15 +1037,15 @@
        "</div>"
       ],
       "text/plain": [
-       "         DATE MHITX48225A052NCEN Hurricane Hurricane Date      Location  Delta\n",
-       "12 2001-01-01              27868      Rita     2005-09-18  Houston Area     -4\n",
-       "13 2002-01-01              27497      Rita     2005-09-18  Houston Area     -3\n",
-       "14 2003-01-01              28036      Rita     2005-09-18  Houston Area     -2\n",
-       "15 2004-01-01              28630      Rita     2005-09-18  Houston Area     -1\n",
-       "16 2005-01-01              30146      Rita     2005-09-18  Houston Area      0"
+       "         DATE Median Hurricane Hurricane Date      Location  Delta\n",
+       "12 2001-01-01  27868      Rita     2005-09-18  Houston Area     -4\n",
+       "13 2002-01-01  27497      Rita     2005-09-18  Houston Area     -3\n",
+       "14 2003-01-01  28036      Rita     2005-09-18  Houston Area     -2\n",
+       "15 2004-01-01  28630      Rita     2005-09-18  Houston Area     -1\n",
+       "16 2005-01-01  30146      Rita     2005-09-18  Houston Area      0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,14 +1070,14 @@
     "rita_median_df['Delta'] = rita_median_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
-    "rita_median_df = rita_median_df.rename(columns={'TXHOUS5URN': 'Unemployment'})\n",
+    "rita_median_df = rita_median_df.rename(columns={'MHITX48225A052NCEN': 'Median'})\n",
     "\n",
     "rita_median_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 92,
    "id": "44c3c19e",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1145,7 @@
        "4  1/1/1974      18.700"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 93,
    "id": "6a74e0b5",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1253,7 @@
        "35 2005-01-01      22.786      Rita     2005-09-18  Houston Area      0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 95,
    "id": "aea1c14e",
    "metadata": {},
    "outputs": [],
