--- a/Project 1 Data Sandy.ipynb
+++ b/Project 1 Data Sandy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "f078be3d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "fa4a3322",
    "metadata": {
     "scrolled": true
@@ -87,7 +87,7 @@
        "4  1/1/2012  169.49"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "007aae98",
    "metadata": {
     "scrolled": false
@@ -204,7 +204,7 @@
        "4      0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "65a308f6",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "4  1/1/2010                     434"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "a9bea881",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "4     2012-10-22  Cape May, NJ     -2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "f1bedfc5",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
        "4  1/1/2012   4674175"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "30b7bdcc",
    "metadata": {
     "scrolled": true
@@ -629,7 +629,7 @@
        "4 2012-01-01   4674175     Sandy     2012-10-22  Cape May, NJ      0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "1c0975f4",
    "metadata": {
     "scrolled": true
@@ -731,7 +731,7 @@
        "4  5/1/2008                6.5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "bdb2b502",
    "metadata": {
     "scrolled": true
@@ -841,7 +841,7 @@
        "4 2008-05-01           6.5     Sandy     2012-10-22  Cape May, NJ     -4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "c79c6885",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
        "4  1/1/2012   55175"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "de3330d8",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1049,7 @@
        "4 2012-01-01   55175     Sandy     2012-10-22  Cape May      0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,8 +1078,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b47e2723",
+   "execution_count": 28,
+   "id": "83f902fd",
    "metadata": {},
    "outputs": [
     {
@@ -1104,73 +1104,49 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>Median</th>\n",
-       "      <th>Hurricane</th>\n",
-       "      <th>Hurricane Date</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Delta</th>\n",
+       "      <th>Population</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2008-01-01</td>\n",
-       "      <td>54423</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>2012-10-22</td>\n",
-       "      <td>Cape May</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>1/1/2008</td>\n",
+       "      <td>96.402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2009-01-01</td>\n",
-       "      <td>49797</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>2012-10-22</td>\n",
-       "      <td>Cape May</td>\n",
-       "      <td>-3</td>\n",
+       "      <td>1/1/2009</td>\n",
+       "      <td>96.026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2010-01-01</td>\n",
-       "      <td>51585</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>2012-10-22</td>\n",
-       "      <td>Cape May</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>1/1/2010</td>\n",
+       "      <td>97.222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>52312</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>2012-10-22</td>\n",
-       "      <td>Cape May</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>1/1/2011</td>\n",
+       "      <td>96.522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>55175</td>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>2012-10-22</td>\n",
-       "      <td>Cape May</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1/1/2012</td>\n",
+       "      <td>96.267</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        DATE  Median Hurricane Hurricane Date  Location  Delta\n",
-       "0 2008-01-01   54423     Sandy     2012-10-22  Cape May     -4\n",
-       "1 2009-01-01   49797     Sandy     2012-10-22  Cape May     -3\n",
-       "2 2010-01-01   51585     Sandy     2012-10-22  Cape May     -2\n",
-       "3 2011-01-01   52312     Sandy     2012-10-22  Cape May     -1\n",
-       "4 2012-01-01   55175     Sandy     2012-10-22  Cape May      0"
+       "       DATE  Population\n",
+       "0  1/1/2008      96.402\n",
+       "1  1/1/2009      96.026\n",
+       "2  1/1/2010      97.222\n",
+       "3  1/1/2011      96.522\n",
+       "4  1/1/2012      96.267"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,8 +1162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2a01e836",
+   "execution_count": 29,
+   "id": "bba66c02",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1254,7 @@
        "4 2012-01-01      96.267     Sandy     2012-10-22  Cape May      0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "3fca64d0",
    "metadata": {},
    "outputs": [],
