--- a/Population Graph.ipynb
+++ b/Population Graph.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "61eebbda",
+   "id": "d9fc8361",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b39bd4ff",
+   "id": "7b4cd6c2",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# data for population\n",
+    "# data for population from all hurricanes\n",
     "\n",
     "pop_sandy = \"./CleanEconData/Sandy_cln_population.csv\"\n",
     "pop_sandy_df = pd.read_csv(pop_sandy)\n",
@@ -41,15 +41,13 @@
     "\n",
     "pop_ike = \"./CleanEconData/Ike_Pop_df.csv\"\n",
     "pop_ike_df = pd.read_csv(pop_ike)\n",
-    "pop_ike_df = pop_ike_df[['Location','Population','Delta']]\n",
-    "\n",
-    "\n"
+    "pop_ike_df = pop_ike_df[['Location','Population','Delta']]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eda437ea",
+   "id": "c87f3b71",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "87c42fb9",
+   "id": "30027163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fd056cfd",
+   "id": "12db39bc",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28e236a",
+   "id": "f836ca2a",
    "metadata": {},
    "outputs": [],
    "source": []
