--- a/Project 1 Data Ike.ipynb
+++ b/Project 1 Data Ike.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "9d5ad0c3",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "df723ae9",
    "metadata": {
     "scrolled": true
@@ -87,7 +87,7 @@
        "4  1980-01-01           71.08"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "a0bb91b4",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "29 2005-01-01               129.75       Ike     2008-09-13  Galveston     -3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "31c4e017",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
        "4  1994-01-01        1317.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "2f215b0f",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "15     2008-09-13  Galveston     -3  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "b7d8170a",
    "metadata": {
     "scrolled": true
@@ -512,7 +512,7 @@
        "4  1/1/2005  1141373.7"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "74751679",
    "metadata": {
     "scrolled": false
@@ -622,7 +622,7 @@
        "4 2005-01-01  1141373.7       Ike     2008-09-13  Galveston     -3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "06c3f813",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        "4  1990-05-01         6.5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "fec16976",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
        "136 2001-05-01           4.6       Ike     2008-09-13  Galveston     -7"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "c930ac8b",
    "metadata": {},
    "outputs": [
@@ -888,49 +888,49 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>MHITX48225A052NCEN</th>\n",
+       "      <th>MHITX48201A052NCEN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1989-01-01</td>\n",
-       "      <td>17667</td>\n",
+       "      <td>1/1/1989</td>\n",
+       "      <td>29643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1990-01-01</td>\n",
+       "      <td>1/1/1990</td>\n",
        "      <td>.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1991-01-01</td>\n",
+       "      <td>1/1/1991</td>\n",
        "      <td>.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1992-01-01</td>\n",
+       "      <td>1/1/1992</td>\n",
        "      <td>.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1993-01-01</td>\n",
-       "      <td>21429</td>\n",
+       "      <td>1/1/1993</td>\n",
+       "      <td>34500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         DATE MHITX48225A052NCEN\n",
-       "0  1989-01-01              17667\n",
-       "1  1990-01-01                  .\n",
-       "2  1991-01-01                  .\n",
-       "3  1992-01-01                  .\n",
-       "4  1993-01-01              21429"
+       "       DATE MHITX48201A052NCEN\n",
+       "0  1/1/1989              29643\n",
+       "1  1/1/1990                  .\n",
+       "2  1/1/1991                  .\n",
+       "3  1/1/1992                  .\n",
+       "4  1/1/1993              34500"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "59117dbb",
    "metadata": {},
    "outputs": [
@@ -972,7 +972,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>Median Income</th>\n",
+       "      <th>MHITX48201A052NCEN</th>\n",
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
@@ -983,7 +983,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>2001-01-01</td>\n",
-       "      <td>27868</td>\n",
+       "      <td>43279</td>\n",
        "      <td>Ike</td>\n",
        "      <td>2008-09-13</td>\n",
        "      <td>Galveston</td>\n",
@@ -992,7 +992,7 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>2002-01-01</td>\n",
-       "      <td>27497</td>\n",
+       "      <td>42704</td>\n",
        "      <td>Ike</td>\n",
        "      <td>2008-09-13</td>\n",
        "      <td>Galveston</td>\n",
@@ -1001,7 +1001,7 @@
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>2003-01-01</td>\n",
-       "      <td>28036</td>\n",
+       "      <td>42262</td>\n",
        "      <td>Ike</td>\n",
        "      <td>2008-09-13</td>\n",
        "      <td>Galveston</td>\n",
@@ -1010,7 +1010,7 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>2004-01-01</td>\n",
-       "      <td>28630</td>\n",
+       "      <td>41922</td>\n",
        "      <td>Ike</td>\n",
        "      <td>2008-09-13</td>\n",
        "      <td>Galveston</td>\n",
@@ -1019,7 +1019,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>2005-01-01</td>\n",
-       "      <td>30146</td>\n",
+       "      <td>44085</td>\n",
        "      <td>Ike</td>\n",
        "      <td>2008-09-13</td>\n",
        "      <td>Galveston</td>\n",
@@ -1030,15 +1030,15 @@
        "</div>"
       ],
       "text/plain": [
-       "         DATE Median Income Hurricane Hurricane Date   Location  Delta\n",
-       "12 2001-01-01         27868       Ike     2008-09-13  Galveston     -7\n",
-       "13 2002-01-01         27497       Ike     2008-09-13  Galveston     -6\n",
-       "14 2003-01-01         28036       Ike     2008-09-13  Galveston     -5\n",
-       "15 2004-01-01         28630       Ike     2008-09-13  Galveston     -4\n",
-       "16 2005-01-01         30146       Ike     2008-09-13  Galveston     -3"
+       "         DATE MHITX48201A052NCEN Hurricane Hurricane Date   Location  Delta\n",
+       "12 2001-01-01              43279       Ike     2008-09-13  Galveston     -7\n",
+       "13 2002-01-01              42704       Ike     2008-09-13  Galveston     -6\n",
+       "14 2003-01-01              42262       Ike     2008-09-13  Galveston     -5\n",
+       "15 2004-01-01              41922       Ike     2008-09-13  Galveston     -4\n",
+       "16 2005-01-01              44085       Ike     2008-09-13  Galveston     -3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "da5028ad",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1138,7 @@
        "4  1/1/2005     274.354"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "171c4b36",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1247,7 @@
        "4 2005-01-01     274.354       Ike     2008-09-13  Galveston     -3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "aea1c14e",
    "metadata": {},
    "outputs": [],
@@ -1302,11 +1302,11 @@
     "  \n",
     "Ike_Housing_df.to_csv(output_data_file4, sep=',')\n",
     "\n",
-    "output_data_file5 = './CleanEconData/Ike_median_df.csv'\n",
+    "output_data_file5 = './CleanEconData/Ike_cln_median.csv'\n",
     "  \n",
     "Ike_median_df.to_csv(output_data_file5, sep=',')\n",
     "\n",
-    "output_data_file6 = './CleanEconData/Ike_Pop_df.csv'\n",
+    "output_data_file6 = './CleanEconData/Ike_cln_Population.csv'\n",
     "  \n",
     "Ike_Pop_df.to_csv(output_data_file6, sep=',')"
    ]
