--- a/Project 1 Data Rita.ipynb
+++ b/Project 1 Data Rita.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "9d5ad0c3",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "df723ae9",
    "metadata": {
     "scrolled": true
@@ -87,7 +87,7 @@
        "4  1/1/1979           67.19"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "a0bb91b4",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "30      0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "31c4e017",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "4  1/1/1994         15855"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "2f215b0f",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "15     2005-09-18  Houston Area      0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "b7d8170a",
    "metadata": {
     "scrolled": true
@@ -519,7 +519,7 @@
        "4  1/1/2005        269128633"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "74751679",
    "metadata": {
     "scrolled": true
@@ -629,7 +629,7 @@
        "4 2005-01-01  269128633      Rita     2005-09-18  Houston Area      0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "06c3f813",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "4  5/1/1990         5.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "fec16976",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
        "136 2001-05-01           4.2      Rita     2005-09-18  Houston Area     -4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "c930ac8b",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "4  1/1/1993              34500"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "59117dbb",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
        "16 2005-01-01  44085      Rita     2005-09-18  Houston Area      0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "44c3c19e",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1145,7 @@
        "4  1/1/1974    1947.100"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "6a74e0b5",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1187,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>TXHARR1POP</th>\n",
+       "      <th>Population</th>\n",
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
@@ -1245,7 +1245,7 @@
        "</div>"
       ],
       "text/plain": [
-       "         DATE  TXHARR1POP Hurricane Hurricane Date      Location  Delta\n",
+       "         DATE  Population Hurricane Hurricane Date      Location  Delta\n",
        "31 2001-01-01    3483.804      Rita     2005-09-18  Houston Area     -4\n",
        "32 2002-01-01    3559.095      Rita     2005-09-18  Houston Area     -3\n",
        "33 2003-01-01    3618.297      Rita     2005-09-18  Houston Area     -2\n",
@@ -1253,7 +1253,7 @@
        "35 2005-01-01    3733.714      Rita     2005-09-18  Houston Area      0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,14 +1278,14 @@
     "rita_population_df['Delta'] = rita_population_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
-    "rita_median_df = rita_median_df.rename(columns={'TXHARR1POP': 'Population'})\n",
+    "rita_population_df = rita_population_df.rename(columns={'TXHARR1POP': 'Population'})\n",
     "\n",
     "rita_population_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "aea1c14e",
    "metadata": {},
    "outputs": [],
